--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html>
 <body>
-<h1>Test</h1>
-<p>test</p>
-<img src="Image 1 Test.jpg">
-<imr src="Image 1 Test.jpg">
+<h1 style="text-align: center; font-family: Arial">Generaimages</h1>
+<p style="text-align: center; color: red; font-family: Arial"><font size="25px"><strong>This site is still under construction/testing</strong></font></p>
+<br>
+<p style="text-align: center"p><img src="Image 1 Test.jpg" width="240" height="300">
+<img src="Image 2 Test.jpg" width="240" height="300"></p>
 </body>
 </html>
