--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <p style="text-align: center"p><img src="Image 1 Test.jpg" width="240" height="300">
 <img src="Image 2 Test.jpg" width="240" height="300"></p>
 <br>
-<p style="text-align: center; font-family: Arial>Paragraph text test</p>
+<p style="text-align: center; font-family: Arial">Paragraph text test</p>
 </body>
 </html>
