--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <img src="Image 2 Test.jpg" width="240" height="300"></p>
 <br>
 <p style="text-align: center; font-family: Arial">Paragraph text test</p>
+<p style="text-align: center;"><a href="Image 1 Test.jpg" download>test download image 1</a></p>  
 </body>
 </html>
