--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <br>
 <p style="text-align: center; font-family: Arial">Paragraph text test</p>
 <p style="text-align: center"><a href="Image 1 Test.jpg" download>test download image 1</a></p>
+<p><a href="https://adionnet.github.io/generaimages/testpage2.html">Test link to page 2</a></p>
+  
 <br>
 <p style="text-align: center">Test text change</p>  
 </body>
