--- a/imagespage1/page1.html
+++ b/imagespage1/page1.html
@@ -5,7 +5,7 @@
 <p style="text-align: center; color: red; font-family: Arial"><font size="25px"><strong>This site is still under construction/testing</strong></font></p>
 <br>
 <p style="text-align: center"p><img src="imagespage1/Image 1 Test.jpg" width="240" height="300">
-<img src="imagespage1/Image 2 Test.jpg" width="240" height="300"></p>
+<img src="Image 3 Test.jpg" width="240" height="300"></p>
 <br>
 <p style="text-align: center; font-family: Arial">Paragraph text test</p>
 <p style="text-align: center"><a href="Image 1 Test.jpg" download>test download image 1</a></p>
