--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <html>
-<body>
-<br>
-<h1 style="text-align: center; font-family: Arial">Generaimages</h1>
-<p style="text-align: center; color: red; font-family: Arial"><font size="25px"><strong>This site is still under construction/testing</strong></font></p>
-<br>
-<p style="text-align: center"p><img src="Image 1 Test.jpg" width="240" height="300">
-<img src="Image 2 Test.jpg" width="240" height="300"></p>
-<br>
-<p style="text-align: center; font-family: Arial">Paragraph text test</p>
-<p style="text-align: center"><a href="Image 1 Test.jpg" download>test download image 1</a></p>
-<p><a href="https://adionnet.github.io/generaimages/testpage2.html">Test link to page 2</a></p>
-  
-<br>
-<p style="text-align: center">Test text change</p>  
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Generaimages</title>
+        <meta name="description" content="Landscapes and more: generative images of a hobbyist">
+        <meta name="keywords" content="landscapes, nature">
+        <style>
+            h1 {text-align: center; font-family: Arial; color: black}
+            h2 {text-align: center; font-family: Arial; color: black}
+            p {text-align: center; font-family: Arial; font-size: 25px; color: black;}
+            table.center{margin-left: auto; margin-right: auto}
+        </style>
+        <body>
+            
+            <br>
+            <p><img src="Generaimages Profile Image.png" width="75" height="75"></p>
+            <h1>Generaimages</h1>
+            <h2>Landscapes and more: generative images of a hobbyist</h2>
+            <p><font size="3">Free images to download. Attribution is optional.
+                <br><br>
+                For personal use: modification of the image is not required.
+                <br>
+                For commercial use: please modify the image (e.g., as a subject's background, in a mockup, with overlay text and in other ways the image can be altered.)
+            </font></p>
+
+            <table class="center">
+                <tr>
+                    <td><img src="Sunrise.jpg" width="600" height="450"></td>
+                    <td><img src="The Mountains and Their Reflections - A Symmetry of Nature.jpg" width="600" height="450"></td>
+                </tr>
+
+                <tr>
+                    <td><p><a href="Sunrise.jpg" download>download</a></p></td>
+                    <td><p><a href="The Mountains and Their Reflections - A Symmetry of Nature.jpg" download>download</a></p></td>  
+                </tr>
+            </table>
+
+            <p style="color: red"><font size="7"><stong>Currently updating/testing previews</stong></font></p>
+
+            <br style="line-height:150px">
+
+        </body>
 </html>
