--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <body>
             
             <br>
-            <p><img src="Generaimages Profile Image.png" width="75" height="75"></p>
+            <p><img src="Generaimages Profile Image.png" width="125" height="125"></p>
             <h1>Generaimages</h1>
             <h2>Landscapes and more: generative images of a hobbyist</h2>
             <p><font size="3">Free images to download. Attribution is optional.
@@ -25,13 +25,13 @@
 
             <table class="center">
                 <tr>
-                    <td><img src="Sunrise.jpg" width="600" height="450"></td>
-                    <td><img src="The Mountains and Their Reflections - A Symmetry of Nature.jpg" width="600" height="450"></td>
+                    <td><img src="Sunrise.jpg" width="400" height="300"></td>
+                    <td><img src="The Mountains and Their Reflections - A Symmetry of Nature.jpg" width="400" height="300"></td>
                 </tr>
 
                 <tr>
-                    <td><p><a href="Sunrise.jpg" download>download</a></p></td>
-                    <td><p><a href="The Mountains and Their Reflections - A Symmetry of Nature.jpg" download>download</a></p></td>  
+                    <td><p><a href="Sunrise.jpg" download><br>download</a></p></td>
+                    <td><p><a href="The Mountains and Their Reflections - A Symmetry of Nature.jpg" download><br>download</a></p></td>  
                 </tr>
             </table>
 
