--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Landscapes and more: generative images of a hobbyist">
         <meta name="keywords" content="landscapes, nature">
         <style>
-            h1 {text-align: center; font-family: Arial; color: black}
+            h1 {text-align: center; font-family: Arial; color: black; font-size: 50px}
             h2 {text-align: center; font-family: Arial; color: black}
             p {text-align: center; font-family: Arial; font-size: 25px; color: black;}
             table.center{margin-left: auto; margin-right: auto}
@@ -13,14 +13,15 @@
         <body>
             
             <br>
-            <p><img src="Generaimages Profile Image.png" width="125" height="125"></p>
+            <p><img src="Generaimages Profile Image.png" width="150" height="150"></p>
             <h1>Generaimages</h1>
             <h2>Landscapes and more: generative images of a hobbyist</h2>
+            <br><br>
             <p><font size="3">Free images to download. Attribution is optional.
                 <br><br>
-                For personal use: modification of the image is not required.
-                <br>
-                For commercial use: please modify the image (e.g., as a subject's background, in a mockup, with overlay text and in other ways the image can be altered.)
+                <u>For personal use:</u> modification of the image is not required.
+                <br><br>
+                <u>For commercial use:</u> please modify the image (e.g., as a subject's background, in a mockup, with overlay text and in other ways the image can be altered.)
             </font></p>
 
             <table class="center">
