--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <meta name="description" content="Landscapes and more: generative images of a hobbyist">
         <meta name="keywords" content="landscapes, nature">
         <style>
-            h1 {text-align: center; font-family: Arial; color: black; font-size: 50px}
+            h1 {text-align: center; font-family: Arial; color: black}
             h2 {text-align: center; font-family: Arial; color: black}
             p {text-align: center; font-family: Arial; font-size: 25px; color: black;}
             table.center{margin-left: auto; margin-right: auto}
         </style>
+        <link rel="icon" type="image/x-icon" href="Generaimages Favicon.ico">
+    </head>
         <body>
             
             <br>
@@ -21,8 +23,11 @@
                 <br><br>
                 <u>For personal use:</u> modification of the image is not required.
                 <br><br>
-                <u>For commercial use:</u> please modify the image (e.g., as a subject's background, in a mockup, with overlay text and in other ways the image can be altered.)
+                <u>For commercial use:</u> please modify the image (e.g., as a subject's background, in a mockup, with overlay text, by making it black and white, or through other alterations.)
+                <br><br>
+                Image dimension: 2300px by 1725px at 72ppi
             </font></p>
+            <br>
 
             <table class="center">
                 <tr>
@@ -37,6 +42,8 @@
             </table>
 
             <p style="color: red"><font size="7"><stong>Currently updating/testing previews</stong></font></p>
+            <br><br>
+            <p><a href="https://generaimages.threadless.com/about">Testing Link(Back to Threadless Page)</a></p>
 
             <br style="line-height:150px">
 
