--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
             h1 {text-align: center; font-family: Arial; color: black}
             h2 {text-align: center; font-family: Arial; color: black}
-            p {text-align: center; font-family: Arial; font-size: 25px; color: black;}
+            p {text-align: center; font-family: Arial; font-size: 17px; color: black;}
             table.center{margin-left: auto; margin-right: auto}
         </style>
         <link rel="icon" type="image/x-icon" href="Generaimages Favicon.ico">
@@ -19,14 +19,13 @@
             <h1>Generaimages</h1>
             <h2>Landscapes and more: generative images of a hobbyist</h2>
             <br><br>
-            <p><font size="3">Free images to download. Attribution is optional.
+            <p>Free images to download. Attribution is optional.
                 <br><br>
                 <u>For personal use:</u> modification of the image is not required.
                 <br><br>
                 <u>For commercial use:</u> please modify the image (e.g., as a subject's background, in a mockup, with overlay text, by making it black and white, or through other alterations.)
                 <br><br>
-                Image dimension: 2300px by 1725px at 72ppi
-            </font></p>
+                Image dimension: 2300px by 1725px at 72ppi</p>
             <br>
 
             <table class="center">
