--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </tr>
 
                 <tr>
-                    <td><p><a href="Sunrise.jpg" download><br>download</a></p></td>
-                    <td><p><a href="The Mountains and Their Reflections - A Symmetry of Nature.jpg" download><br>download</a></p></td>  
+                    <td><p><a href="Sunrise.jpg" download><br><font size="20">download</font></a></p></td>
+                    <td><p><a href="The Mountains and Their Reflections - A Symmetry of Nature.jpg" download><br><font size="20">download</font></a></p></td>  
                 </tr>
             </table>
 
