--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Generaimages</h1>
             <h2>Landscapes and more: generative images of a hobbyist</h2>
             <br><br>
-            <p>Free images to download. Attribution is optional.
+            <p>You can download these images for free. Attribution is optional.
                 <br><br>
                 <u>For personal use:</u> modification of the image is not required.
                 <br><br>
@@ -39,11 +39,64 @@
                     <td><p><a href="The Mountains and Their Reflections - A Symmetry of Nature.jpg" download><br><font size="6">download</font></a></p></td>  
                 </tr>
             </table>
-
-            <p style="color: red"><font size="7"><stong>Currently updating/testing previews</stong></font></p>
             <br><br>
-            <p><a href="https://generaimages.threadless.com/about">Testing Link(Back to Threadless Page)</a></p>
 
+            <table class="center">
+                <tr>
+                    <td><img src="Forest and Mountains.jpg" width="400" height="300"></td>
+                    <td><img src="Green Hills.jpg" width="400" height="300"></td>
+                </tr>
+
+                <tr>
+                    <td><p><a href="Forest and Mountains.jpg" download><br><font size="6">download</font></a></p></td>
+                    <td><p><a href="Green Hills.jpg" download><br><font size="6">download</font></a></p></td>  
+                </tr>
+            </table>
+            <br><br>
+            
+            <table class="center">
+                <tr>
+                    <td><img src="Waterfall.jpg" width="400" height="300"></td>
+                    <td><img src="Waterfall and Moss.jpg" width="400" height="300"></td>
+                </tr>
+
+                <tr>
+                    <td><p><a href="Waterfall.jpg" download><br><font size="6">download</font></a></p></td>
+                    <td><p><a href="Waterfall and Moss.jpg" download><br><font size="6">download</font></a></p></td>  
+                </tr>
+            </table>
+            <br><br>
+            
+            <table class="center">
+                <tr>
+                    <td><img src="Flower Garden Centerpiece.jpg" width="400" height="300"></td>
+                    <td><img src="Flower Garden With Creek.jpg" width="400" height="300"></td>
+                </tr>
+
+                <tr>
+                    <td><p><a href="Flower Garden Centerpiece.jpg" download><br><font size="6">download</font></a></p></td>
+                    <td><p><a href="Flower Garden With Creek.jpg" download><br><font size="6">download</font></a></p></td>  
+                </tr>
+            </table>
+            <br><br>
+
+            <table class="center">
+                <tr>
+                    <td><img src="Golden Hour in a Desert.jpg" width="400" height="300"></td>
+                    <td><img src="Sunset at the Beach.jpg" width="400" height="300"></td>
+                </tr>
+
+                <tr>
+                    <td><p><a href="Golden Hour in a Desert.jpg" download><br><font size="6">download</font></a></p></td>
+                    <td><p><a href="Sunset at the Beach.jpg" download><br><font size="6">download</font></a></p></td>  
+                </tr>
+            </table>
+            <br><br>
+
+            <hr>
+
+            <br><br>
+            <p><a href="https://generaimages.threadless.com/about"><img src="To Generaimages Threadless Page Image.png" width="200" height="200"></a></p>
             <br style="line-height:150px">
 
         </body>
