--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                 <tr>
                     <td><p><a href="Golden Hour in a Desert.jpg" download><br><font size="6">download</font></a></p></td>
-                    <td><p><a href="Sunset at the Beach.jpg" download><br><font size="6">download</font></a></p></td>  
+                    <td><p><a href="Sunset at a Beach.jpg" download><br><font size="6">download</font></a></p></td>  
                 </tr>
             </table>
             <br><br>
