--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <table class="center">
                 <tr>
                     <td><img src="Golden Hour in a Desert.jpg" width="400" height="300"></td>
-                    <td><img src="Sunset at the Beach.jpg" width="400" height="300"></td>
+                    <td><img src="Sunset at a Beach.jpg" width="400" height="300"></td>
                 </tr>
 
                 <tr>
