--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             <hr>
 
             <br><br>
-            <p><a href="https://generaimages.threadless.com/about"><img src="To Generaimages Threadless Page Image.png" width="200" height="200"></a></p>
+            <p>Back To</p>
+            <p><a href="https://generaimages.threadless.com/about"><img src="Generaimages Threadless Bio Image.png" width="200" height="200"></a></p>
             <br style="line-height:150px">
 
         </body>
