--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <hr>
 
             <br><br>
-            <p><font size="6">Back To</font>font></p>
+            <p><font size="6">Back To</font></p>
             <p><a href="https://generaimages.threadless.com/about"><img src="Generaimages Threadless Bio Image.png" width="200" height="200"></a></p>
             <br style="line-height:150px">
 
