--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
             <hr>
 
             <br><br>
+            <p><a href='https://ko-fi.com/W7W81ANLUI' target='_blank'><img height='72' style='border:0px;height:72px;' src='https://storage.ko-fi.com/cdn/kofi3.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a></p>
+            <br><br>
+            <hr>
+            <br><br>
             <p><font size="6">Back To</font></p>
             <p><a href="https://generaimages.threadless.com/about"><img src="Generaimages Threadless Bio Image.png" width="200" height="200"></a></p>
+            <br><br>
+            <hr>
             <br style="line-height:150px">
-
         </body>
 </html>
