--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LREHRF744B"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-LREHRF744B');
+        </script>
         <meta charset="UTF-8">
         <title>Generaimages</title>
         <meta name="description" content="Landscapes and more: generative images of a hobbyist">
