--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <style>
+      p {text-align: center}
+    </style>
+  </head>
+  <body>
+    <br>
+    <p>Page 2 test preview (Under construction</p>
+  </body>
+</html>
