--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
             gtag('config', 'G-LREHRF744B');
         </script>
+
+        <!-- Pinterest Tag -->
+        <meta name="p:domain_verify" content="0de9de95d158d54e43d79be735abf1e9"/>
         
         <meta charset="UTF-8">
         <title>Generaimages</title>
