--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             <br><br>
             <hr>
             <br><br>
+            <p><font size="6">Back to</font></p>
             <p><a href="https://generaimages.threadless.com/about"><img src="Generaimages Threadless Bio Image.png" width="200" height="200"></a></p>
-            <p><a href="https://generaimages.threadless.com/about"><font size="2px">https://generaimages.threadless.com/about</font></a></p>
             <br><br>
             <hr>
             <br style="line-height:150px">
