--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <br><br>
             <hr>
             <br><br>
-            <p><font size="6">Back to</font></p>
+            <p><a href="https://generaimages.threadless.com/about"<font size="6">Back to</font></a></p>
             <p><a href="https://generaimages.threadless.com/about"><img src="Generaimages Threadless Bio Image.png" width="200" height="200"></a></p>
             <br><br>
             <hr>
