--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <meta charset="UTF-8">
         <title>Generaimages</title>
-        <meta name="description" content="Landscapes and more: generative images of a hobbyist">
+        <meta name="description" content="Landscapes, bodies of water, flowers and more: generative images of a hobbyist.">
         <meta name="keywords" content="landscapes, nature">
         <style>
             h1 {text-align: center; font-family: Arial; color: black}
@@ -30,7 +30,7 @@
             <br>
             <p><img src="Generaimages Profile Image.png" width="150" height="150"></p>
             <h1>Generaimages</h1>
-            <h2>Landscapes and more: generative images of a hobbyist</h2>
+            <h2>Landscapes, bodies of water, flowers and more: generative images of a hobbyist.</h2>
             <br><br>
             <p>You can download these images for free. Attribution is optional.
                 <br><br>
