--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <br><br>
                 <u>For personal use:</u> modification of the image is not required.
                 <br><br>
-                <u>For commercial use:</u> please modify the image (e.g., as a subject's background, in a mockup, with overlay text, by making it black and white, or through other alterations.)
+                <u>For commercial use:</u> please modify the image (e.g., as a subject's background, with overlay text, by making it black and white, or through other alterations.)
                 <br><br>
                 Image dimension: 2300px by 1725px at 72ppi</p>
             <br>
